--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
 <div class="container">
     <h1>Angular services</h1>
+    <h2>App-module:</h2>
     <div class="card">
         <h2>Count: {{ CounterService.count }}</h2>
         <br>
         <button class="btn" (click) = "CounterService.increase()">+</button>
         <button class="btn" (click) = "CounterService.decrease()">-</button>
     </div>
+    <div class="card">
+        <h2>Count: {{ LocalCounterService.count }}</h2>
+        <br>
+        <button class="btn" (click)="LocalCounterService.increase()">+</button>
+        <button class="btn" (click)="LocalCounterService.decrease()">-</button>
+    </div>
+    <hr>
+    <h2>App-counter:</h2>
+    <app-counter></app-counter>
 </div>
